preprocessed all articles, converted to binary-value dataframe

--- a/src/news.ipynb
+++ b/src/news.ipynb
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def text_to_tokens(filename):\n",
+    "def file_to_string(filename):\n",
     " '''Opens the input text file and\n",
-    " returns a list of all of its words.'''\n",
+    " returns a string of all its text.'''\n",
     " file = open(filename, 'r')\n",
     " text = file.read()\n",
     " file.close()\n",
@@ -93,7 +93,7 @@
     "# example of using the function\n",
     "\n",
     "filepath = 'data/text/cnn_trump.txt'\n",
-    "test_txt = text_to_tokens(filepath)\n",
+    "test_txt = file_to_string(filepath)\n",
     "test_txt"
    ]
   },
@@ -104,9 +104,9 @@
    "outputs": [],
    "source": [
     "def clean_text(text):\n",
-    "    '''Takes in a list of tokens and cleans them by converting\n",
+    "    '''Takes in a string of text and cleans it by converting\n",
     "    to lowercase, removing punctuation, removing stopwords, \n",
-    "    and stemming. Returns the new list of tokens.'''\n",
+    "    and stemming. Returns the new string.'''\n",
     "    ps = PorterStemmer()\n",
     "    # create list of stopwords \n",
     "    stopwords_list = stopwords.words('english')\n",
@@ -114,7 +114,6 @@
     "    text = text.lower()\n",
     "    # convert to ascii characters\n",
     "    text = text.encode(\"ascii\", \"ignore\").decode()\n",
-    "    new_text = ''\n",
     "    for chr in text:\n",
     "        # only keep characters in the string that are not punctuation symbols\n",
     "        if chr in string.punctuation:\n",
@@ -155,103 +154,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['data/text/nyp_affirmative.txt',\n",
-       " 'data/text/bbc_tanks.txt',\n",
-       " 'data/text/cnn_hamas.txt',\n",
-       " 'data/text/wsj_trump.txt',\n",
-       " 'data/text/wp_affirmative.txt',\n",
-       " 'data/text/bbc_balloon.txt',\n",
-       " 'data/text/wsj_affirmative.txt',\n",
-       " 'data/text/nyt_trump.txt',\n",
-       " 'data/text/wp_balloon.txt',\n",
-       " 'data/text/cnn_pentagon.txt',\n",
-       " 'data/text/cnn_tanks.txt',\n",
-       " 'data/text/bbc_hamas.txt',\n",
-       " 'data/text/nbc_tanks.txt',\n",
-       " 'data/text/nyp_hamas.txt',\n",
-       " 'data/text/.DS_Store',\n",
-       " 'data/text/cnn_balloon.txt',\n",
-       " 'data/text/fox_pentagon.txt',\n",
-       " 'data/text/wp_biden.txt',\n",
-       " 'data/text/nyp_tanks.txt',\n",
-       " 'data/text/nbc_hamas.txt',\n",
-       " 'data/text/abc_balloon.txt',\n",
-       " 'data/text/nyt_pentagon.txt',\n",
-       " 'data/text/fox_tanks.txt',\n",
-       " 'data/text/wp_trump.txt',\n",
-       " 'data/text/fox_hamas.txt',\n",
-       " 'data/text/nyp_balloon.txt',\n",
-       " 'data/text/abc_hamas.txt',\n",
-       " 'data/text/abc_santos.txt',\n",
-       " 'data/text/nyp_santos.txt',\n",
-       " 'data/text/fox_affirmative.txt',\n",
-       " 'data/text/wsj_biden.txt',\n",
-       " 'data/text/nyt_biden.txt',\n",
-       " 'data/text/abc_tanks.txt',\n",
-       " 'data/text/nbc_affirmative.txt',\n",
-       " 'data/text/nyt_hamas.txt',\n",
-       " 'data/text/wsj_tanks.txt',\n",
-       " 'data/text/wp_pentagon.txt',\n",
-       " 'data/text/nyp_pentagon.txt',\n",
-       " 'data/text/bbc_trump.txt',\n",
-       " 'data/text/nyt_affirmative.txt',\n",
-       " 'data/text/cnn_trump.txt',\n",
-       " 'data/text/abc_biden.txt',\n",
-       " 'data/text/cnn_affirmative.txt',\n",
-       " 'data/text/bbc_affirmative.txt',\n",
-       " 'data/text/wsj_hamas.txt',\n",
-       " 'data/text/wsj_pentagon.txt',\n",
-       " 'data/text/nyt_tanks.txt',\n",
-       " 'data/text/nbc_balloon.txt',\n",
-       " 'data/text/fox_biden.txt',\n",
-       " 'data/text/wsj_balloon.txt',\n",
-       " 'data/text/nbc_pentagon.txt',\n",
-       " 'data/text/bbc_santos.txt',\n",
-       " 'data/text/wsj_santos.txt',\n",
-       " 'data/text/nbc_trump.txt',\n",
-       " 'data/text/nyp_trump.txt',\n",
-       " 'data/text/cnn_santos.txt',\n",
-       " 'data/text/abc_pentagon.txt',\n",
-       " 'data/text/fox_santos.txt',\n",
-       " 'data/text/wp_hamas.txt',\n",
-       " 'data/text/fox_trump.txt',\n",
-       " 'data/text/nbc_biden.txt',\n",
-       " 'data/text/nyp_biden.txt',\n",
-       " 'data/text/nyt_balloon.txt',\n",
-       " 'data/text/wp_tanks.txt',\n",
-       " 'data/text/wp_santos.txt',\n",
-       " 'data/text/bbc_biden.txt',\n",
-       " 'data/text/cnn_biden.txt',\n",
-       " 'data/text/abc_trump.txt',\n",
-       " 'data/text/nyt_santos.txt',\n",
-       " 'data/text/bbc_pentagon.txt',\n",
-       " 'data/text/abc_affirmative.txt',\n",
-       " 'data/text/nbc_santos.txt',\n",
-       " 'data/text/fox_balloon.txt']"
+       "711"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# how all the text files will be looped through\n",
+    "len(cleaned_text.split(\" \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<keras.src.preprocessing.text.Tokenizer object at 0x178d7e6d0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>said</th>\n",
+       "      <th>wa</th>\n",
+       "      <th>hi</th>\n",
+       "      <th>ha</th>\n",
+       "      <th>trump</th>\n",
+       "      <th>thi</th>\n",
+       "      <th>biden</th>\n",
+       "      <th>offici</th>\n",
+       "      <th>mr</th>\n",
+       "      <th>u</th>\n",
+       "      <th>...</th>\n",
+       "      <th>messr</th>\n",
+       "      <th>overlap</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>convert</th>\n",
+       "      <th>marku</th>\n",
+       "      <th>schreiber</th>\n",
+       "      <th>riski</th>\n",
+       "      <th>extort</th>\n",
+       "      <th>limitationsth</th>\n",
+       "      <th>chargesha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 5535 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    said   wa   hi   ha  trump  thi  biden  offici   mr    u  ...  messr  \\\n",
+       "0    1.0  1.0  1.0  1.0    0.0  1.0    0.0     0.0  0.0  1.0  ...    0.0   \n",
+       "1    1.0  1.0  1.0  1.0    0.0  1.0    1.0     1.0  0.0  1.0  ...    0.0   \n",
+       "2    1.0  1.0  1.0  1.0    1.0  1.0    1.0     0.0  0.0  0.0  ...    0.0   \n",
+       "3    1.0  1.0  1.0  1.0    0.0  1.0    1.0     1.0  0.0  1.0  ...    0.0   \n",
+       "4    1.0  1.0  1.0  1.0    0.0  1.0    0.0     1.0  0.0  1.0  ...    0.0   \n",
+       "..   ...  ...  ...  ...    ...  ...    ...     ...  ...  ...  ...    ...   \n",
+       "67   1.0  1.0  1.0  1.0    0.0  1.0    1.0     1.0  0.0  1.0  ...    0.0   \n",
+       "68   1.0  1.0  1.0  1.0    0.0  1.0    0.0     1.0  0.0  1.0  ...    0.0   \n",
+       "69   1.0  1.0  1.0  1.0    0.0  1.0    1.0     1.0  0.0  0.0  ...    0.0   \n",
+       "70   1.0  1.0  1.0  1.0    0.0  1.0    1.0     1.0  1.0  1.0  ...    0.0   \n",
+       "71   1.0  1.0  1.0  1.0    1.0  1.0    0.0     0.0  1.0  1.0  ...    1.0   \n",
+       "\n",
+       "    overlap   vs  convert  marku  schreiber  riski  extort  limitationsth  \\\n",
+       "0       0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "1       0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "2       0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "3       0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "4       0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "..      ...  ...      ...    ...        ...    ...     ...            ...   \n",
+       "67      0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "68      0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "69      0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "70      0.0  0.0      0.0    0.0        0.0    0.0     0.0            0.0   \n",
+       "71      1.0  1.0      1.0    1.0        1.0    1.0     1.0            1.0   \n",
+       "\n",
+       "    chargesha  \n",
+       "0         0.0  \n",
+       "1         0.0  \n",
+       "2         0.0  \n",
+       "3         0.0  \n",
+       "4         0.0  \n",
+       "..        ...  \n",
+       "67        0.0  \n",
+       "68        0.0  \n",
+       "69        0.0  \n",
+       "70        0.0  \n",
+       "71        1.0  \n",
+       "\n",
+       "[72 rows x 5535 columns]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# looping through all text files to apply preprocessing functions\n",
     "\n",
-    "directory = 'data/text/'\n",
     "file_list = []\n",
-    "for filename in os.listdir(directory):\n",
+    "article_docs = []\n",
+    "dir = os.listdir('data/text/')\n",
+    "dir.sort()\n",
+    "for filename in dir:\n",
     "    filepath = os.path.join(directory, filename)\n",
     "    file_list.append(f\"{filepath}\")\n",
-    "file_list\n",
-    "    # use preprocessing functions\n",
-    "    # somehow append each list of tokens (each article) to a dataframe\n",
+    "    if filename.split(\".\")[-1] == \"txt\":\n",
+    "        article_string = file_to_string(filepath)\n",
+    "        new_string = clean_text(article_string)\n",
+    "        article_docs.append(new_string)\n",
+    "\n",
+    "#article_docs\n",
+    "\n",
+    "t = Tokenizer()\n",
+    "t.fit_on_texts(article_docs)\n",
+    "print(t)\n",
+    "encoded_docs = t.texts_to_matrix(article_docs, mode='binary')\n",
+    "words = [x for x in t.word_index.keys()]\n",
+    "binary_df = pd.DataFrame(data = encoded_docs[:, 1:], columns=words)\n",
+    "binary_df\n",
+    "\n",
+    "# convert the list of article strings into a dataframe\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
