created df with tf-idf values

--- a/src/news.ipynb
+++ b/src/news.ipynb
@@ -773,6 +773,273 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>said</th>\n",
+       "      <th>trump</th>\n",
+       "      <th>biden</th>\n",
+       "      <th>offici</th>\n",
+       "      <th>mr</th>\n",
+       "      <th>u</th>\n",
+       "      <th>israel</th>\n",
+       "      <th>presid</th>\n",
+       "      <th>tank</th>\n",
+       "      <th>hous</th>\n",
+       "      <th>...</th>\n",
+       "      <th>messr</th>\n",
+       "      <th>overlap</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>convert</th>\n",
+       "      <th>marku</th>\n",
+       "      <th>schreiber</th>\n",
+       "      <th>riski</th>\n",
+       "      <th>extort</th>\n",
+       "      <th>article_source</th>\n",
+       "      <th>article_topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.827036</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.313275</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Supreme Court Ruling on Affirmative Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.081563</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.267700</td>\n",
+       "      <td>4.139471</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.594586</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.881491</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.871958</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Chinese Surveillance Balloon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.238584</td>\n",
+       "      <td>5.086179</td>\n",
+       "      <td>3.733245</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.428008</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.128570</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Biden's Low Approval Rates in Polls</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.683881</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.823774</td>\n",
+       "      <td>2.667558</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.201528</td>\n",
+       "      <td>6.446654</td>\n",
+       "      <td>1.334974</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.891998</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>The Deadliest Attack by Hamas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.238584</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.493348</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.873465</td>\n",
+       "      <td>2.519533</td>\n",
+       "      <td>1.334974</td>\n",
+       "      <td>3.689062</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Pentagon Documents Leak</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 5508 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       said     trump     biden    offici   mr         u    israel    presid  \\\n",
+       "0  1.827036  0.000000  0.000000  0.000000  0.0  2.313275  0.000000  0.000000   \n",
+       "1  3.081563  0.000000  2.267700  4.139471  0.0  3.594586  0.000000  1.881491   \n",
+       "2  2.238584  5.086179  3.733245  0.000000  0.0  0.000000  0.000000  2.428008   \n",
+       "3  2.683881  0.000000  1.823774  2.667558  0.0  3.201528  6.446654  1.334974   \n",
+       "4  2.238584  0.000000  0.000000  2.493348  0.0  3.873465  2.519533  1.334974   \n",
+       "\n",
+       "       tank      hous  ...  messr  overlap   vs  convert  marku  schreiber  \\\n",
+       "0  0.000000  0.000000  ...    0.0      0.0  0.0      0.0    0.0        0.0   \n",
+       "1  0.000000  1.871958  ...    0.0      0.0  0.0      0.0    0.0        0.0   \n",
+       "2  0.000000  2.128570  ...    0.0      0.0  0.0      0.0    0.0        0.0   \n",
+       "3  0.000000  0.891998  ...    0.0      0.0  0.0      0.0    0.0        0.0   \n",
+       "4  3.689062  0.000000  ...    0.0      0.0  0.0      0.0    0.0        0.0   \n",
+       "\n",
+       "   riski  extort  article_source                               article_topic  \n",
+       "0    0.0     0.0        ABC News  Supreme Court Ruling on Affirmative Action  \n",
+       "1    0.0     0.0        ABC News                Chinese Surveillance Balloon  \n",
+       "2    0.0     0.0        ABC News         Biden's Low Approval Rates in Polls  \n",
+       "3    0.0     0.0        ABC News               The Deadliest Attack by Hamas  \n",
+       "4    0.0     0.0        ABC News                     Pentagon Documents Leak  \n",
+       "\n",
+       "[5 rows x 5508 columns]"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create dataframe with tf-idf values\n",
+    "\n",
+    "encoded_docs_tfidf = t.texts_to_matrix(article_docs, mode='tfidf')\n",
+    "tfidf_df = pd.DataFrame(data = encoded_docs_tfidf[:, 1:], columns=words)\n",
+    "# List of conditions\n",
+    "source_conditions = [\n",
+    "      tfidf_df['abcarticle'] != 0\n",
+    "    , tfidf_df['bbcarticle'] != 0\n",
+    "    , tfidf_df['cnnarticle'] != 0\n",
+    "    , tfidf_df['foxarticle'] != 0\n",
+    "    , tfidf_df['nbcarticle'] != 0\n",
+    "    , tfidf_df['nyparticle'] != 0\n",
+    "    , tfidf_df['nytarticle'] != 0\n",
+    "    , tfidf_df['wparticle'] != 0\n",
+    "    , tfidf_df['wsjarticle'] != 0\n",
+    "]\n",
+    "\n",
+    "# List of values to return\n",
+    "source_choices  = [\n",
+    "      \"ABC News\"\n",
+    "    , \"BBC\"\n",
+    "    , \"CNN\"\n",
+    "    , \"Fox News\"\n",
+    "    , \"NBC News\"\n",
+    "    , \"New York Post\"\n",
+    "    , \"The New York Times\"\n",
+    "    , \"The Washington Post\"\n",
+    "    , \"The Wall Street Journal\"\n",
+    "]\n",
+    "\n",
+    "# List of conditions\n",
+    "topic_conditions = [\n",
+    "      tfidf_df['affirmativearticle'] != 0\n",
+    "    , tfidf_df['balloonarticle'] != 0\n",
+    "    , tfidf_df['bidenarticle'] != 0\n",
+    "    , tfidf_df['hamasarticle'] != 0\n",
+    "    , tfidf_df['pentagonarticle'] != 0\n",
+    "    , tfidf_df['santosarticle'] != 0\n",
+    "    , tfidf_df['tanksarticle'] != 0\n",
+    "    , tfidf_df['trumparticle'] != 0\n",
+    "]\n",
+    "# List of values to return\n",
+    "topic_choices  = [\n",
+    "      \"Supreme Court Ruling on Affirmative Action\"\n",
+    "    , \"Chinese Surveillance Balloon\"\n",
+    "    , \"Biden's Low Approval Rates in Polls\"\n",
+    "    , \"The Deadliest Attack by Hamas\"\n",
+    "    , \"Pentagon Documents Leak\"\n",
+    "    , \"George Santos' Expulsion from Congress\"\n",
+    "    , \"U.S. and Germany Send Tanks to Ukraine\"\n",
+    "    , \"Trump's Indictment\"\n",
+    "]\n",
+    "# create a new source column \n",
+    "tfidf_df[\"article_source\"] = np.select(source_conditions, source_choices, \"ERROR\")\n",
+    "\n",
+    "# create a new topic column\n",
+    "tfidf_df[\"article_topic\"] = np.select(topic_conditions, topic_choices, \"ERROR\")\n",
+    "\n",
+    "tfidf_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
